Fix light-mode flash on load in dark mode (#1879)

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -13,6 +13,20 @@ html {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+// Paint the theme background on the first frame to avoid a light-mode flash
+// before Mantine's layered styles resolve.
+body {
+	--mantine-color-text: var(--mantine-color-slate-2);
+
+	background-color: var(--mantine-color-obsidian-9) !important;
+
+	@include light {
+		--mantine-color-text: var(--mantine-color-slate-7);
+
+		background-color: var(--mantine-color-white) !important;
+	}
+}
+
 input::-ms-reveal,
 input::-ms-clear {
 	display: none;
